Kubernetes/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rif07-worker
  namespace: challenge-adinusa

spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      imagePullSecrets: 
      - name: harbor-secret
      containers:
      - name: worker
        image: registry.adinusa.id/project-kubernetes-bootcamp/rif07/worker:latest
        imagePullPolicy: Always
