Kubernetes/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rif07-results
  namespace: challenge-adinusa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: results
  template:
    metadata:
      labels:
        app: results
    spec:
      imagePullSecrets: 
      - name: harbor-secret

      containers:
      - name: results
        image: registry.adinusa.id/project-kubernetes-bootcamp/rif07/results:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rif07-results-svc
  namespace: challenge-adinusa
spec:
  selector:
    app: results
  ports:
  - port: 80
    targetPort: 80
