Kubernetes/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rif07-votes
  namespace: challenge-adinusa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votes
  template:
    metadata:
      labels:
        app: votes
    spec:
      imagePullSecrets: 
      - name: harbor-secret
      
      containers:
      - name: votes
        image: registry.adinusa.id/project-kubernetes-bootcamp/rif07/votes:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rif07-votes-svc
  namespace: challenge-adinusa
spec:
  selector:
    app: votes
  ports:
  - port: 8080
    targetPort: 8080
